--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@angular/router": "^20.3.0",
     "@primeuix/themes": "^1.2.5",
     "aos": "^2.3.4",
+    "chart.js": "^4.5.1",
+    "ng2-charts": "^8.0.0",
     "primeng": "^20.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
